working experience done

--- a/src/CSS/Description.css
+++ b/src/CSS/Description.css
@@ -1,12 +1,15 @@
 .description {
+  box-sizing: border-box;
   width: 100%;
   margin-top: 3rem;
-  height: 20vh;
-  font-size: 3rem;
+  height: 50vh;
+  padding: 0 2rem;
+  font-size: 2rem;
   color: #0d5d60;
 }
 
 .description p {
-  line-height: 5rem;
-  letter-spacing: 0.5rem;
+  line-height: 4rem;
+  letter-spacing: 0.5 rem;
+  font-weight: 600;
 }
