--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  margin: 0 2rem;
+  margin: 2rem 2rem;
   width: 29%;
   height: 70vh;
   box-shadow: 0.5rem 0.5rem 1rem 0.6rem #aab7b7;
@@ -37,4 +37,32 @@
 
 .project__link {
   text-align: center;
+}
+
+.project__items:hover {
+  animation: shake 0.82s;
+  -webkit-animation: shake 0.82s;
+}
+
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
