--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -17,13 +17,16 @@ html {
 }
 
 .title_title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 4rem;
   margin: 4rem 1rem;
   width: 20%;
-  text-align: center;
+  height: 6rem;
   color: #fff;
   border-radius: 1rem;
   background: #12777b;
-  background: -webkit-linear-gradient(to right, #15dfe7, #0f8084);
-  background: linear-gradient(to right, #15dfe7, #0f8084);
+  background: -webkit-linear-gradient(to bottom, #15dfe7, #0f8084);
+  background: linear-gradient(to bottom, #15dfe7, #0f8084);
 }
