--- a/src/CSS/Description.css
+++ b/src/CSS/Description.css
@@ -1,15 +1,13 @@
 .description {
   box-sizing: border-box;
-  width: 100%;
-  margin-top: 3rem;
-  height: 47vh;
-  padding: 0 2rem;
+  display: inline-block;
   font-size: 2rem;
-  color: #0d5d60;
+  color: #666b68;
 }
 
 .description p {
   line-height: 4rem;
   letter-spacing: 0.5 rem;
   font-weight: 600;
+  text-justify: auto;
 }
