--- a/src/CSS/PersonalDetails.css
+++ b/src/CSS/PersonalDetails.css
@@ -1,12 +1,12 @@
 .personal {
   font-size: 2rem;
   height: 46vh;
-  width: 100%;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   position: relative;
   box-shadow: 0.5rem 0.5rem 1rem 0.6rem #aab7b7;
+  border-radius: 2rem;
 }
 
 .personal__item {
