--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  margin-top: 2rem;
 }
 
 .project__items {
@@ -9,6 +10,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  border-radius: 2rem;
   margin: 2rem 2rem;
   width: 29%;
   height: 70vh;
@@ -23,7 +25,7 @@
   font-size: 3rem;
   font-weight: 600;
   margin: 2rem 0;
-  color: #12777b;
+  color: #666b68;
 }
 
 .project__description {
