--- a/src/CSS/PersonalDetails.css
+++ b/src/CSS/PersonalDetails.css
@@ -1,19 +1,29 @@
-.personal {
+.personal__container {
   font-size: 2rem;
   height: 46vh;
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
-  position: relative;
   box-shadow: 0.5rem 0.5rem 1rem 0.6rem #aab7b7;
   border-radius: 2rem;
 }
 
+.personal__detail {
+  flex: 1 0 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.personal__photo {
+  max-height: 20rem;
+  border-radius: 50%;
+  flex: 1 0 15%;
+  margin-left: 1.5rem;
+}
 .personal__item {
   box-sizing: border-box;
-  padding: 3rem;
   width: 80%;
-  height: 25vh;
   text-align: center;
   display: flex;
   align-items: center;
@@ -21,7 +31,6 @@
 }
 
 .personal__item--cName {
-  height: 9vh;
   font-size: 6rem;
   font-weight: 700;
   padding: 1.5rem;
@@ -31,7 +40,6 @@
 }
 
 .personal__item--eName {
-  height: 9vh;
   font-size: 4rem;
   font-weight: 500;
   padding: 1.5rem;
@@ -42,44 +50,31 @@
 
 .personal__item--jobTitle {
   margin-left: 2rem;
-  height: 3vh;
   width: 15%;
   background-color: #28b5bb;
   color: #fff;
   border-radius: 1.5rem;
-  padding: 1.5rem;
+  padding: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.photo {
-  width: 15rem;
-  height: 15rem;
-  border-radius: 50%;
-  display: inline-block;
-  margin: auto;
-}
-
 .contact {
-  flex-basis: 60%;
-  height: 9vh;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  margin-left: 25rem;
-  position: relative;
-  bottom: 3.5rem;
+  width: 80%;
 }
 
 .contact__email {
   flex-basis: 30%;
-  height: 9vh;
   display: flex;
   align-items: center;
   justify-content: center;
   text-decoration: none;
   color: #9caeaf;
+  padding: 1.5rem;
 }
 
 .contact--iconGmail {
@@ -94,7 +89,6 @@
 
 .contact__phone {
   flex-basis: 30%;
-  height: 9vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -104,7 +98,6 @@
 
 .contact__github {
   flex-basis: 30%;
-  height: 9vh;
   display: flex;
   align-items: center;
   justify-content: center;
