--- a/src/CSS/PersonalDetails.css
+++ b/src/CSS/PersonalDetails.css
@@ -1,7 +1,9 @@
 .personal__container {
   font-size: 2rem;
   height: 46vh;
+  max-width: 100%;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   box-shadow: 0.5rem 0.5rem 1rem 0.6rem #aab7b7;
   border-radius: 2rem;
@@ -17,14 +19,16 @@
 
 .personal__photo {
   max-height: 20rem;
-  border-radius: 50%;
+  max-width: 20rem;
   flex: 1 0 15%;
+  border-radius: 50%;
   margin-left: 1.5rem;
 }
 .personal__item {
   box-sizing: border-box;
   width: 80%;
   text-align: center;
+  flex-wrap: wrap;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -33,31 +37,22 @@
 .personal__item--cName {
   font-size: 6rem;
   font-weight: 700;
-  padding: 1.5rem;
   color: #12777b;
-  display: flex;
-  align-items: center;
 }
 
 .personal__item--eName {
   font-size: 4rem;
   font-weight: 500;
-  padding: 1.5rem;
+  padding: 0 4rem;
   color: #12777b;
-  display: flex;
-  align-items: flex-end;
 }
 
 .personal__item--jobTitle {
-  margin-left: 2rem;
-  width: 15%;
+  width: 15rem;
   background-color: #28b5bb;
   color: #fff;
   border-radius: 1.5rem;
   padding: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .contact {
@@ -71,7 +66,6 @@
   flex-basis: 30%;
   display: flex;
   align-items: center;
-  justify-content: center;
   text-decoration: none;
   color: #9caeaf;
   padding: 1.5rem;
@@ -91,7 +85,6 @@
   flex-basis: 30%;
   display: flex;
   align-items: center;
-  justify-content: center;
   margin-left: 2rem;
   color: #9caeaf;
 }
@@ -111,4 +104,79 @@
   text-decoration: none;
   font-size: 2rem;
   color: #9caeaf;
+}
+
+@media screen and (max-width: 480px) {
+  .personal__container {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .personal__photo {
+    height: 12rem;
+    width: 12rem;
+    margin-top: 1rem;
+  }
+
+  .personal__detail {
+    flex: 1 0 40%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: center;
+    margin-top: 0.6rem;
+    width: 95%;
+  }
+
+  .personal__item {
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: left;
+    width: 100%;
+  }
+
+  .personal__item--cName,
+  .personal__item--eName {
+    font-size: 2.5rem;
+    text-align: center;
+    margin: 1rem;
+    padding: 0 1rem;
+  }
+
+  .personal__item--jobTitle {
+    width: 50%;
+    font-size: 2rem;
+    padding: 0.4rem;
+    text-align: center;
+  }
+
+  .contact {
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .contact__phone {
+    margin: 0;
+    padding: 0;
+    flex: 1 0 25%;
+  }
+
+  .contact__email {
+    align-items: center;
+    padding: 1rem;
+  }
+
+  .contact__github {
+    width: 100%;
+  }
+
+  .social__github--img,
+  .contact--iconPhone,
+  .contact--iconGmail {
+    margin-right: 0.5rem;
+  }
 }
