--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -25,3 +25,9 @@ html {
   color: #333;
   border-bottom: 2px solid #12777b;
 }
+
+@media screen and (max-width: 480px) {
+  .main {
+    margin: 2rem;
+  }
+}
