--- a/src/CSS/Description.css
+++ b/src/CSS/Description.css
@@ -11,3 +11,16 @@
   font-weight: 600;
   text-justify: auto;
 }
+
+@media screen and (max-width: 480px) {
+  .description p {
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 1024px) {
+  .description p {
+    line-height: 4rem;
+    font-size: 3rem;
+  }
+}
