--- a/src/CSS/Experience.css
+++ b/src/CSS/Experience.css
@@ -1,6 +1,7 @@
 .experience {
   display: flex;
   justify-items: center;
+  flex-wrap: wrap;
   flex-direction: column;
   width: 100%;
 }
@@ -48,4 +49,71 @@
   width: 80%;
   margin: 0 0 1.5rem 10rem;
   color: #666b68;
+}
+
+@media screen and (max-width: 480px) {
+  .experience {
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: center;
+  }
+  .experience__title {
+    flex-wrap: wrap;
+    font-size: 2.5rem;
+    margin: 0.2rem 0;
+  }
+
+  .experience_icon {
+    width: 3rem;
+    margin: 0 1rem 0.5rem 0;
+  }
+  .experience__jobtitle {
+    margin: 0;
+  }
+  .experience__company {
+    margin-left: 4rem;
+  }
+
+  .period_location {
+    width: 100%;
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    top: 0;
+    left: 0;
+    font-size: 1.5rem;
+    margin: 1rem 0;
+  }
+  .experience__description {
+    font-size: 2rem;
+    margin: 0.3rem;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .period_location {
+    font-size: 2rem;
+    align-items: flex-start;
+    left: 10rem;
+    bottom: 0;
+    width: 60%;
+  }
+
+  .experience__description {
+    font-size: 3rem;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .period_location {
+    font-size: 3rem;
+    align-items: flex-start;
+    left: 10rem;
+    bottom: 0;
+    width: 80%;
+  }
+
+  .experience__description {
+    font-size: 3rem;
+  }
 }
