first rwd project

--- a/src/CSS/Education.css
+++ b/src/CSS/Education.css
@@ -58,4 +58,20 @@
   .education__detail {
     font-size: 2rem;
   }
+
+  .education__container {
+    height: 58vh;
+  }
+}
+
+@media screen and (min-width: 481px) and(max-width: 768px) {
+  .education__container {
+    height: 60vh;
+  }
+}
+
+@media screen and (min-width: 769px) and(max-width: 1024px) {
+  .education__container {
+    height: 60vh;
+  }
 }
