--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -68,3 +68,69 @@
     transform: translate3d(4px, 0, 0);
   }
 }
+
+@media screen and (max-width: 480px) {
+  .project__items {
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 70vh;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .project__title {
+    margin: 0;
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .project__items {
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 43%;
+    height: 60vh;
+    align-items: flex-start;
+    justify-content: center;
+  }
+
+  .project__title {
+    margin: 0;
+    font-size: 3rem;
+  }
+
+  .project__description {
+    margin: 0;
+    font-size: 3rem;
+  }
+
+  .project__container {
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .project__items {
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 43%;
+    height: 60vh;
+    align-items: flex-start;
+    justify-content: center;
+  }
+
+  .project__title {
+    margin: 0;
+    font-size: 3rem;
+  }
+
+  .project__description {
+    margin: 0;
+    font-size: 3rem;
+  }
+
+  .project__container {
+    justify-content: center;
+  }
+}
