--- a/src/CSS/PersonalDetails.css
+++ b/src/CSS/PersonalDetails.css
@@ -250,3 +250,72 @@
     flex-basis: 30%;
   }
 }
+
+@media screen and (min-device-width: 769px) and (max-device-width: 1024px) {
+  .personal__container {
+    width: 100%;
+    height: 20vh;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .personal__photo {
+    max-height: 20rem;
+    max-width: 20rem;
+    margin: 1rem;
+  }
+
+  .personal__detail {
+    flex: 1 0 40%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: center;
+    margin-top: 0.6rem;
+    width: 95%;
+  }
+
+  .personal__item {
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: left;
+    width: 100%;
+  }
+
+  .personal__item--cName,
+  .personal__item--eName {
+    font-size: 2.5rem;
+    text-align: center;
+    margin: 1rem;
+    padding: 0 1rem;
+  }
+
+  .personal__item--jobTitle {
+    font-size: 2rem;
+    padding: 0.4rem;
+    text-align: center;
+  }
+
+  .contact {
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+    width: 80%;
+  }
+
+  .contact__phone {
+    margin: 0;
+    padding: 0;
+    flex-basis: 60%;
+  }
+
+  .contact__email {
+    align-items: center;
+    padding: 1rem;
+    flex-basis: 70%;
+  }
+
+  .contact__github {
+    flex-basis: 30%;
+  }
+}
