--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -36,7 +36,7 @@ html {
   }
 }
 
-@media screen and (max-width: 768px) and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .main {
     margin: 2rem;
   }
