second final commit

--- a/src/CSS/Description.css
+++ b/src/CSS/Description.css
@@ -14,7 +14,9 @@
 
 @media screen and (max-width: 480px) {
   .description p {
-    font-size: 2.5rem;
+    line-height: 3.5rem;
+    font-size: 2rem;
+    font-weight: 500;
   }
 }
 
@@ -22,5 +24,6 @@
   .description p {
     line-height: 4rem;
     font-size: 3rem;
+    font-weight: 500;
   }
 }
