edit skill icon size

--- a/src/CSS/Education.css
+++ b/src/CSS/Education.css
@@ -64,13 +64,7 @@
   }
 }
 
-@media screen and (min-width: 481px) and(max-width: 768px) {
-  .education__container {
-    height: 60vh;
-  }
-}
-
-@media screen and (min-width: 769px) and(max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .education__container {
     height: 60vh;
   }
