--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -10,11 +10,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  border-radius: 2rem;
+  border-radius: 1rem;
   margin: 2rem 2rem;
   width: 29%;
   height: 70vh;
-  box-shadow: 0.5rem 0.5rem 1rem 0.6rem #aab7b7;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+    rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 
 .project_image {
