--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -31,7 +31,7 @@
 
 .project__description {
   font-size: 2rem;
-  padding: 2rem;
+  padding: 1rem;
   color: #585c5c;
   justify-content: space-evenly;
   line-height: 5rem;
@@ -42,32 +42,34 @@
   text-align: center;
 }
 
-.project__items:hover {
-  animation: shake 0.82s;
-  -webkit-animation: shake 0.82s;
+.btn {
+  border: 2px solid #e74c3c;
+  border-radius: 0.6rem;
+  color: #e74c3c;
+  cursor: pointer;
+  font-size: 1rem;
+  line-height: 1;
+  margin: 1rem;
+  margin-top: auto;
+  padding: 1.2rem 4rem;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
 }
 
-@keyframes shake {
-  10%,
-  90% {
-    transform: translate3d(-1px, 0, 0);
-  }
+.btn:hover,
+.btn:focus,
+.btn:active {
+  color: #fff;
+  outline: 0;
+}
 
-  20%,
-  80% {
-    transform: translate3d(2px, 0, 0);
-  }
-
-  30%,
-  50%,
-  70% {
-    transform: translate3d(-4px, 0, 0);
-  }
-
-  40%,
-  60% {
-    transform: translate3d(4px, 0, 0);
-  }
+.project__btn {
+  transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+}
+.project__btn:hover {
+  box-shadow: 0 0 40px 40px #e74c3c inset;
 }
 
 @media screen and (max-width: 480px) {
@@ -75,7 +77,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    height: 70vh;
+    height: 55vh;
     align-items: center;
     justify-content: center;
   }
@@ -84,14 +86,20 @@
     margin: 0;
     font-size: 2.5rem;
   }
+  .project__description {
+    display: flex;
+    margin: 0;
+    font-size: 3rem;
+    flex-basis: 100%;
+  }
 }
 
-@media screen and (min-width: 481px) and (max-width: 768px) {
+@media screen and (min-width: 481px) and (max-width: 767px) {
   .project__items {
     flex-direction: row;
     flex-wrap: wrap;
-    width: 43%;
-    height: 60vh;
+    width: 100%;
+    height: 70vh;
     align-items: flex-start;
     justify-content: center;
   }
@@ -102,8 +110,10 @@
   }
 
   .project__description {
+    display: flex;
     margin: 0;
     font-size: 3rem;
+    flex-basis: 100%;
   }
 
   .project__container {
@@ -111,12 +121,12 @@
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
   .project__items {
     flex-direction: row;
     flex-wrap: wrap;
     width: 43%;
-    height: 60vh;
+    height: 50vh;
     align-items: flex-start;
     justify-content: center;
   }
@@ -127,6 +137,8 @@
   }
 
   .project__description {
+    display: flex;
+    width: 100%;
     margin: 0;
     font-size: 3rem;
   }
