--- a/src/CSS/PersonalDetails.css
+++ b/src/CSS/PersonalDetails.css
@@ -54,6 +54,7 @@
   color: #fff;
   border-radius: 1.5rem;
   padding: 1rem;
+  margin: 5rem;
 }
 
 .contact {
@@ -149,6 +150,7 @@
     width: 50%;
     font-size: 2rem;
     padding: 0.4rem;
+    margin: 0;
     text-align: center;
   }
 
@@ -201,12 +203,12 @@
     width: 100%;
     height: 40%;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
   }
   .personal__photo {
-    max-height: 20rem;
-    max-width: 20rem;
-    margin: 1rem;
+    max-width: 15rem;
+    max-height: 15rem;
+    margin-top: 1rem;
   }
 
   .personal__detail {
@@ -239,6 +241,7 @@
     font-size: 2rem;
     padding: 0.4rem;
     text-align: center;
+    margin: 0;
   }
 
   .contact {
@@ -252,7 +255,7 @@
   .contact__phone {
     margin: 1rem 0;
     padding: 0;
-    flex-basis: 60%;
+    flex-basis: 100%;
   }
   .contact__phone p {
     margin: 0.5rem 0;
@@ -277,7 +280,7 @@
 @media screen and (min-device-width: 769px) and (max-device-width: 1024px) {
   .personal__container {
     width: 100%;
-    height: 20vh;
+    height: 100%;
     align-items: center;
     justify-content: flex-start;
   }
@@ -316,7 +319,7 @@
   .personal__item--jobTitle {
     font-size: 3rem;
     padding: 1rem;
-    margin-left: 4rem;
+    margin: 0;
     text-align: center;
   }
 
