--- a/src/CSS/Description.css
+++ b/src/CSS/Description.css
@@ -14,7 +14,7 @@
 
 @media screen and (max-width: 480px) {
   .description p {
-    line-height: 3.5rem;
+    line-height: 3rem;
     font-size: 2rem;
     font-weight: 500;
   }
@@ -25,5 +25,14 @@
     line-height: 4rem;
     font-size: 3rem;
     font-weight: 500;
+  }
+}
+
+@media screen and (max-width: 812px) and (orientation: landscape) {
+  .description p {
+    line-height: 3rem;
+    font-size: 2rem;
+    font-weight: 500;
+    margin: 0;
   }
 }
