--- a/src/CSS/Education.css
+++ b/src/CSS/Education.css
@@ -64,8 +64,34 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 481px) and (max-width: 768px) {
   .education__container {
     height: 60vh;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .education__container {
+    height: 100%;
+  }
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 812px) and (orientation: landscape) {
+  .education__container {
+    height: 100%;
+  }
+  .education__image {
+    width: 10rem;
+    margin: 0;
+  }
+  .education__items {
+    margin: 1.5rem 1rem;
+    width: 100%;
+  }
+
+  .education__period,
+  .education__school,
+  .education__detail {
+    font-size: 2rem;
   }
 }
