--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -48,7 +48,6 @@
   color: #e74c3c;
   cursor: pointer;
   font-size: 1.5rem;
-  line-height: 1;
   margin: 1rem;
   margin-top: auto;
   padding: 1.2rem 4rem;
@@ -130,7 +129,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     width: 43%;
-    height: 45vh;
+    height: 54vh;
     align-items: flex-start;
     justify-content: center;
   }
@@ -148,5 +147,21 @@
 
   .project__container {
     justify-content: center;
+  }
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 812px) and (orientation: landscape) {
+  .project__items {
+    height: 150vh;
+  }
+  .project__description {
+    font-size: 2rem;
+    line-height: 2;
+    flex-basis: 80%;
+  }
+
+  .project__title {
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
   }
 }
