--- a/src/CSS/Description.css
+++ b/src/CSS/Description.css
@@ -1,14 +1,14 @@
 .description {
   box-sizing: border-box;
   display: inline-block;
-  font-size: 2rem;
+  font-size: 2.8rem;
   color: #666b68;
 }
 
 .description p {
-  line-height: 4rem;
+  line-height: 2;
   letter-spacing: 0.5 rem;
-  font-weight: 600;
+  font-weight: 500;
   text-justify: auto;
 }
 
