--- a/src/CSS/PersonalDetails.css
+++ b/src/CSS/PersonalDetails.css
@@ -358,3 +358,35 @@
     font-size: 3rem;
   }
 }
+
+@media screen and (max-width: 812px) and (orientation: landscape) {
+  .personal__container {
+    width: 100%;
+    height: 40%;
+    align-items: center;
+    justify-content: center;
+  }
+  .personal__photo {
+    max-width: 15rem;
+    max-height: 15rem;
+    margin-top: 1rem;
+  }
+
+  .personal__detail {
+    flex: 1 0 40%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: center;
+    margin-top: 0.6rem;
+    width: 95%;
+  }
+
+  .personal__item {
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: left;
+    width: 100%;
+  }
+}
