--- a/src/CSS/PersonalDetails.css
+++ b/src/CSS/PersonalDetails.css
@@ -359,7 +359,7 @@
   }
 }
 
-@media screen and (max-width: 812px) and (orientation: landscape) {
+@media screen and (min-width: 300px) and (max-width: 950px) and (orientation: landscape) {
   .personal__container {
     width: 100%;
     height: 40%;
@@ -388,5 +388,52 @@
     flex-wrap: wrap;
     text-align: left;
     width: 100%;
+  }
+
+  .personal__item--cName,
+  .personal__item--eName {
+    font-size: 2.5rem;
+    text-align: center;
+    margin: 1rem;
+    padding: 0 1rem;
+  }
+
+  .personal__item--jobTitle {
+    font-size: 2rem;
+    padding: 0.4rem;
+    text-align: center;
+    margin: 0;
+  }
+
+  .contact {
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+    width: 80%;
+    margin: 2rem 0;
+  }
+
+  .contact__phone {
+    margin: 1rem 0;
+    padding: 0;
+    flex-basis: 100%;
+  }
+  .contact__phone p {
+    margin: 0.5rem 0;
+  }
+
+  .contact--iconGmail {
+    width: 3rem;
+    margin-right: 1.9rem;
+  }
+
+  .contact__email {
+    align-items: center;
+    flex-basis: 70%;
+    margin: 0;
+  }
+
+  .contact__github {
+    flex-basis: 30%;
   }
 }
